--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -37,3 +37,6 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
