--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -3,7 +3,7 @@ name: 'Terraform'
 on:
   push:
     branches:  
-    - master 
+    - main
   pull_request:
 
 jobs:
@@ -37,6 +37,6 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      # Hasta aqui el plan
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve
