--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -20,8 +20,22 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
+      - name: Terraform Formatter
+        id: fmt
+        run: terraform fmt -recursive
+
       - name: Terraform Init
+        id: init
         run: terraform init
 
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan
+
       - name: Terraform Apply
+        id: apply
         run: terraform apply -auto-approve
